AG-11613 Small dark mode fixes

--- a/documentation/ag-grid-docs/src/components/showcase/examples/ecommerce-inventory/components/ecommerce-example/EcommerceExample.module.css
+++ b/documentation/ag-grid-docs/src/components/showcase/examples/ecommerce-inventory/components/ecommerce-example/EcommerceExample.module.css
@@ -21,7 +21,6 @@
 :global(.ag-theme-quartz-dark) {
     --ag-header-background-color: transparent !important;
     --ag-data-color: rgb(23, 23, 23);
-    --ag-header-foreground-color: rgb(96, 96, 96) !important;
     --ag-row-hover-color: #f4f4f4 !important;
 }
 
