--- a/documentation/ag-grid-docs/src/components/showcase/examples/ecommerce-inventory/components/image-cell-renderer/ImageCellRenderer.module.css
+++ b/documentation/ag-grid-docs/src/components/showcase/examples/ecommerce-inventory/components/image-cell-renderer/ImageCellRenderer.module.css
@@ -14,7 +14,3 @@
     border-radius: 8px;
     margin: 8px;
 }
-
-.imageContainer img {
-    margin-right: 0 !important;
-}
